--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <canvas id="myCanvas" width="1024" height="768"></canvas>
-<script type="text/javascript" src="../javascript/pong.js">
+<script type="text/javascript" src="javascript/pong.js">
 </script>
 </body>
 </html>
